@@ -49,7 +49,9 @@ https://github.com/elastic/beats/compare/v6.4.0...6.x[Check the HEAD diff]
 ==== Added
 
 *Affecting all Beats*
+
 - Add backoff on error support to redis output. {pull}7781[7781]
+- Allow for cloud-id to specify a custom port. This makes cloud-id work in ECE contexts. {pull}7887[7887]
 
 *Auditbeat*
 
